# teutonic

./: .gitignore  DESIGN.md  MINING_TEUTONIC_XXIV.md  README.md  chain.lxxx.toml  chain.toml  chain_config.py  ecosystem.config.js  eval_server.py  eval_torch.py  eval_vllm.py  index.html  miner.py  pyproject.toml  run_local.py  tunnel.sh  validator.py
archs/quasar/: seed.py
archs/qwen3_moe/: seed.py
docs/: DESIGN.md  LXXX_GOLIVE_REPORT.md  LXXX_RUNBOOK.md  LXXX_SANDBOX_REPORT.md  LXXX_SOAK_REPORT.md  MINING.md  MINING_TEUTONIC_XXIV.md  SCORING_PLAN.md
eval/: __init__.py  torch_runner.py  vllm_runner.py  vllm_server.py
neurons/: miner.py  trainer.py  validator.py
scripts/: benchmark_vllm.py  calibrate_probe.py  cleanup_gpu.sh  create_challenger.py  create_king.py  experiment_gaming.py  fix_config.py  ingest_hf.py  mock_duel.py  mock_duel_fast.py  patch_seed_king_hash.py  reshard_dataset.py  restart_both.sh  restart_vllm.sh  run_benchmark.sh  run_everything.sh  run_full_eval.sh  sandbox_smoke.sh  sandbox_synth_shard.py  seed.py  setup_eval.py  smoke_eval.py  smoke_eval_teutonic_xxiv.py  start_servers.sh  tokenize_qwen.py
scripts/bot/: dashboard.py
scripts/experiments/hippius_poc/runs/20260504T120046Z-46bfe3cc/: RESULTS.md  bench.jsonl  manifest.tinyllama.json  (+1 more)
scripts/mining/: .env.example  README.md  _lib.sh  _remote_run.sh  eval.sh  noise.sh  preflight.py  preflight.sh  report.py  run_pipeline.sh  setup.sh  smoke.sh  start.sh  submit.sh  submit_challenger.py  tail.sh  train.sh  train_challenger.py
scripts/training_bundle/: README.md  train_lora_token_ids.py
src/teutonic/: __init__.py  cli.py  commit.py  config.py  dataset.py  eval_worker.py  hparams.py  miner.py  model.py  orchestrator.py  validation.py  validator.py  verification.py
tests/: test_convergence.py  test_scale.py  test_scoring.py  test_stress.py
website/: index.html
(+16 files in other folders)
