[project]
name = "teutonic"
version = "0.1.0"
description = "Holy pretraining incentives — Bittensor SN3 (Teutonic) validator + miner."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "bittensor",
    "boto3",
    "httpx",
    "numpy>=1.26",
    "scipy",
    "huggingface-hub>=0.26",
    "hf_transfer>=0.1",
    "safetensors>=0.4",
    "torch>=2.5",
    "transformers>=4.46",
    "fastapi",
    "uvicorn",
    "pydantic",
    "peft>=0.13",
    "accelerate>=1.0",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
Homepage = "https://teutonic.ai"
Repository = "https://github.com/unarbos/teutonic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archs", "eval"]
only-include = [
    "validator.py",
    "miner.py",
    "eval_server.py",
    "chain_config.py",
    "chain.toml",
    "archs",
    "eval",
]

[tool.ruff]
line-length = 100
target-version = "py311"
